[package]
name = "pocketsphinx"
version = "0.5.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]

description = "Rust wrapper for libpocketsphinx"
homepage = "https://github.com/kriomant/pocketsphinx-rs"
repository = "https://github.com/kriomant/pocketsphinx-rs"
license = "MIT"
readme = "README.md"
keywords = ["pocketsphinx", "voice", "recognition", "audio"]

[dependencies]
libc = "0.2.4"
pocketsphinx-sys = "0.4.*"
